--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+  <title>hitco.at Server-Status</title>
+  <meta name=viewport content="width=device-width">
+  <style>
+    html, body, iframe { height:100%; width:100%; margin:0; border:0; display:block }
+  </style>
+  <iframe src="https://stats.uptimerobot.com/NG0DCJo"></iframe>
+</html>
