--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <meta name=viewport content="width=device-width">
   <style>
     html, body, iframe { height:100%; width:100%; margin:0; border:0; display:block }
+	body { background-color: black; }
+	.box { background: #009933; 
+	       font-family: "Roboto",Arial,sans-serif;
+		   font-size: 15px;
+		   border: 2px solid; border-color: white;
+	       border-radius: 12px 12px 12px 12px; 
+		   text-align: center; color: white; 
+		   margin: 0 auto; width: 80%; height: auto; padding: 10px; }
   </style>
+  <body>
+    <div class="box">
+      Anbei der Server- & Service-Status von hitco.at (automatisierter UptimeRobot Status-Check).<br/>
+	  Dem Server-Admin Gunnar Haslinger sind derzeit keine Störungen bekannt.<br/> 
+	  Nötigenfalls Kontakt über Signal|Telegram|WhatsApp aufnehmen!
+    </div>
   <iframe src="https://stats.uptimerobot.com/NG0DCJo"></iframe>
+  </body>
 </html>
