--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <meta name=viewport content="width=device-width">
   <style>
     html, body, iframe { height:100%; width:100%; margin:0; border:0; display:block }
-	body { background-color: black; }
-	.box { background: #009933; 
-	       font-family: "Roboto",Arial,sans-serif;
-		   font-size: 15px;
-		   border: 2px solid; border-color: white;
-	       border-radius: 12px 12px 12px 12px; 
-		   text-align: center; color: white; 
-		   margin: 0 auto; width: 80%; height: auto; padding: 10px; }
+    body { background-color: black; }
+    .boxborder { background: black; height: 10px; padding: 0px; }
+    .box { background: #DEEBFA;
+           font-family: "Roboto",Arial,sans-serif;
+           font-size: 0.9em; font-weight: normal;
+           border: 0px solid; border-color: white;
+           border-radius: 12px 12px 12px 12px; 
+           text-align: center; color: black; 
+           margin: auto; width: 90%; max-width: 960px; height: auto; padding: 0.2em; }
   </style>
   <body>
+    <div class="boxborder"></div>
     <div class="box">
-      Anbei der Server- & Service-Status von hitco.at (automatisierter UptimeRobot Status-Check).<br/>
-	  Dem Server-Admin Gunnar Haslinger sind derzeit keine Störungen bekannt.<br/> 
-	  Nötigenfalls Kontakt über Signal|Telegram|WhatsApp aufnehmen!
+      Server- & Service-Status von hitco.at (automatisierter Uptime-Robot Status-Check).<br/>
+      Im Bedarfsfall Kontakt mit Gunnar Haslinger über Signal/Telegram/WhatsApp herstellen!
     </div>
+    <div class="boxborder"></div>
   <iframe src="https://stats.uptimerobot.com/NG0DCJo"></iframe>
   </body>
 </html>
