--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <title>hitco.at Server-Status</title>
+  <meta http-equiv="Refresh" content="1; URL=https://stats.uptimerobot.com/NG0DCJo">
   <meta name=viewport content="width=device-width">
   <style>
     html, body, iframe { height:100%; width:100%; margin:0; border:0; display:block }
@@ -18,9 +19,14 @@
     <div class="boxborder"></div>
     <div class="box">
       Server- & Service-Status von hitco.at (automatisierter Uptime-Robot Status-Check).<br/>
-      Im Bedarfsfall Kontakt mit Gunnar Haslinger über Signal/Telegram/WhatsApp herstellen!
+      Im Bedarfsfall Kontakt mit Gunnar Haslinger über Signal/Telegram/WhatsApp herstellen!<br/>
+      &nbsp;<br/>
+      <a href="https://stats.uptimerobot.com/NG0DCJo">Server- & Service-Status von hitco.at aufrufen</a>
+
+	  
     </div>
     <div class="boxborder"></div>
-  <iframe src="https://stats.uptimerobot.com/NG0DCJo"></iframe>
+  <!-- <iframe src="https://stats.uptimerobot.com/NG0DCJo"></iframe> 
+    Iframe funktioniert nicht mehr, da Uptime-Robot X-Frame-Options auf deny gesetzt hat, stattdessen redirect:  -->
   </body>
 </html>
