--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       Server- & Service-Status von hitco.at (automatisierter Uptime-Robot Status-Check).<br/>
       Im Bedarfsfall Kontakt mit Gunnar Haslinger über Signal/Telegram/WhatsApp herstellen!<br/>
       &nbsp;<br/>
-      <a href="https://stats.uptimerobot.com/NG0DCJo">Server- & Service-Status von hitco.at aufrufen</a>
+      <a href="https://stats.uptimerobot.com/NG0DCJo">Server- & Service-Status von hitco.at aufrufen<br/>(es wird in 2 Sekunden automatisch weitergeleitet ...)</a>
 
 	  
     </div>
